fix: overflow / resize / overlap of autocomplete inputs

--- a/src/frontend/scss/main.scss
+++ b/src/frontend/scss/main.scss
@@ -127,14 +127,14 @@ pre {
   .taxon-search,
   .language-search {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 100px 100px 100px;
   }
 
   .search-filters-left-col {
     display: grid;
 
     &.keyword-search {
-      grid-template-rows: 16.66% 33.32% 16.66% 16.66% 16.66%;
+      grid-template-rows: 100px 200px 100px 100px 100px;
     }
   }
 
@@ -142,8 +142,12 @@ pre {
     display: grid;
 
     &.keyword-search {
-      grid-template-rows: 16.66% 16.66% 16.66% 16.66% 16.66%;
+      grid-template-rows: 100px 100px 100px 100px 100px;
     }
+  }
+
+  .autocomplete__menu {
+    z-index: 99;
   }
 }
 
@@ -391,6 +395,19 @@ h2:focus-visible {
       #side-filters-submit-btn {
         max-width: 175px;
         margin-bottom: 20px;
+      }
+
+      .side-filter-fieldset {
+        margin-top: -30px;
+        margin-bottom: 30px;
+      }
+
+      .govuk-form-group {
+        height: 70px;
+
+        .autocomplete__menu {
+          z-index: 99;
+        }
       }
     }
   }
